# npc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/amber-monolith/: adventure.md  config.toml
examples/amber-monolith/characters/: tokk.md  vess.md
examples/amber-monolith/lore/vess/: monolith.md
examples/amber-monolith/secrets/: vess.md
examples/glass-monolith/: adventure.md  config.toml
examples/glass-monolith/characters/: tokk.md  vess.md
examples/glass-monolith/lore/vess/: monolith.md
examples/rusty-lantern/: adventure.md  character.md  config.toml  secrets.md
examples/rusty-lantern/lore/: tavern.md
scripts/: probe_narration.py  probe_secrets.py  record_demo.py  render_samples.py
src/npc/: __init__.py  app.py  cli.py  config.py  doctor.py  events.py  hotkey.py  llm.py  overlay.py  roster.py  stt.py  tts.py
src/npc/audio/: player.py  recorder.py
src/npc/session/: history.py  logbook.py  lore.py  prompt.py  secrets.py  sentences.py
src/npc/static/: overlay.html
src/npc/templates/: adventure.md  character.md  config.toml  logbook.md  secrets.md
tests/: conftest.py  test_app_pipeline.py  test_cli_hotkey.py  test_cli_ux.py  test_config.py  test_doctor.py  test_examples.py  test_history.py  test_hotkey.py  test_integration.py  test_llm.py  test_logbook.py  test_lore.py  test_multi_npc.py  test_overlay.py  test_player.py  test_prompt.py  test_recorder.py  test_roster.py  test_secrets.py  test_sentences.py  test_stt.py  test_tts.py
