[project]
name = "ttrpg-npc"
version = "1.0.0"
description = "Offline voice agent that role-plays NPCs at the tabletop RPG game table"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "seetee" }]
keywords = ["ttrpg", "tabletop", "rpg", "npc", "voice", "offline", "whisper", "piper", "ollama"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "evdev>=1.7",
    "faster-whisper>=1.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "ollama>=0.5",
    "piper-tts>=1.2",
    "pypdf>=5",
    "prompt-toolkit>=3.0",
    "sounddevice>=0.5",
    "websockets>=13",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9",
]

[project.urls]
Homepage = "https://github.com/seetee/npc"
Repository = "https://github.com/seetee/npc"
Issues = "https://github.com/seetee/npc/issues"
Changelog = "https://github.com/seetee/npc/blob/main/CHANGELOG.md"

[project.scripts]
npc = "npc.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npc"]

[tool.hatch.build.targets.sdist]
exclude = ["docs/", ".github/", "campaigns/"]

[tool.pytest.ini_options]
markers = [
    "integration: needs real models/services (run with `pytest -m integration`)",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
